[package]
name = "dibsv3"
version = "0.0.1"
authors = ["Nate Tenczar <ntenczar@gmail.com>"]

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_codegen = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }

[patch.crates-io]
ring = { git = "https://github.com/SergioBenitez/ring", branch = "v0.11" }
rocket = { git = "https://github.com/SergioBenitez/Rocket", branch = "v0.3" }

