[package]
name = "dibsv3"
version = "0.0.1"
authors = ["Nate Tenczar <ntenczar@gmail.com>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
serde = "1.0"
serde_derive = "1.0"
diesel = { version = "1.1.1", features = ["postgres", "r2d2"] }
dotenv = "0.9.0"
uuid = { version = "0.6.0-beta", features = ["v4"] }
