[package]
name = "dibsv3"
version = "0.0.2"
authors = ["Nate Tenczar <ntenczar@gmail.com>"]

[dependencies]
rocket = "0.4.0"
rocket_contrib = "0.4.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.9.0"
uuid = { version = "0.6.0-beta", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
